--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,10 @@
 language:objective-c
-script:xcodebuild -project UseTravisCIDemo.xcodeproj -scheme UseTravisCIDemo -configuration Debug -sdk iphonesimulator -destination 'name=iPhone 6' 
+osx_image: xcode7.3
+
+xcode_project:UseTravisCIDemo.xcodeproj
+
+xcode_scheme:UseTravisCIDemo
+
+xcode_sdk:iphonesimulator6
+
+# script:xcodebuild -project UseTravisCIDemo.xcodeproj -scheme UseTravisCIDemo -configuration Debug -sdk iphonesimulator -destination 'name=iPhone 6' 
