--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,9 @@
 language: objective-c
 
 osx_image: xcode7.3
+
+xcode_project: UseTravisCIDemo.xcodeproj
+
+xcode_scheme: UseTravisCIDemo
+
+xcode_sdk: iphonesimulator8.1
